lib_LTLIBRARIES = libsymspg.la 
libsymspg_la_SOURCES = \
cell.c \
debug.c \
hall_symbol.c \
kpoint.c \
lattice.c \
mathfunc.c \
niggli.c \
pointgroup.c \
primitive.c \
refinement.c \
site_symmetry.c \
sitesym_database.c \
spacegroup.c \
spg_database.c \
spglib.c \
spglib_f.c \
spin.c \
symmetry.c \
tetrahedron_method.c \
triplet_kpoint.c \
cell.h \
debug.h \
hall_symbol.h \
kpoint.h \
lattice.h \
mathfunc.h \
niggli.h \
pointgroup.h \
primitive.h \
refinement.h \
site_symmetry.h \
sitesym_database.h \
spacegroup.h \
spg_database.h \
spglib.h \
spin.h \
symmetry.h \
tetrahedron_method.h \
triplet_kpoint.h

pkginclude_HEADERS = \
cell.h \
debug.h \
hall_symbol.h \
kpoint.h \
lattice.h \
mathfunc.h \
niggli.h \
pointgroup.h \
primitive.h \
refinement.h \
site_symmetry.h \
sitesym_database.h \
spacegroup.h \
spg_database.h \
spglib.h \
spin.h \
symmetry.h \
tetrahedron_method.h \
triplet_kpoint.h

# libsymspg_la_LDFLAGS = -version-info 0:1:0
libsymspg_la_LIBADD = -lm
