lib_LTLIBRARIES = libsymspg.la 
libsymspg_la_SOURCES = \
cell.c \
debug.c \
hall_symbol.c \
kpoint.c \
lattice.c \
mathfunc.c \
pointgroup.c \
primitive.c \
refinement.c \
site_symmetry.c \
sitesym_database.c \
spacegroup.c \
spg_database.c \
spglib.c \
spglib_f.c \
spin.c \
symmetry.c \
cell.h \
debug.h \
hall_symbol.h \
kpoint.h \
lattice.h \
mathfunc.h \
pointgroup.h \
primitive.h \
refinement.h \
site_symmetry.h \
sitesym_database.h \
spacegroup.h \
spg_database.h \
spglib.h \
spin.h \
symmetry.h

pkginclude_HEADERS = \
cell.h \
debug.h \
hall_symbol.h \
kpoint.h \
lattice.h \
mathfunc.h \
pointgroup.h \
primitive.h \
refinement.h \
site_symmetry.h \
sitesym_database.h \
spacegroup.h \
spg_database.h \
spglib.h \
spin.h \
symmetry.h
